[package]
name = "implayer"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.10.0"
glutin = "0.27.0"
imgui = "*"
imgui-glow-renderer = "*"
imgui-winit-support = "*"
cpal = "0.13.5"
symphonia = { version = "0.5.0", features = ["aac", "mp3", "isomp4"] }
rb = "0.3.2"
copypasta = "0.7.1"
souvlaki = "0.5.1"
raw-window-handle = "*"
