[package]
name = "implayer"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "^0.12.0"
winit = "^0.27.2"
glutin = "0.29.1"
imgui = "^0.11.0"
imgui-glow-renderer = "^0.11.0"
imgui-winit-support = "^0.11.0"
cpal = "0.13.3"
symphonia = { version = "0.5.2", features = ["all-codecs", "all-formats"] }
rb = "0.4.1"
copypasta = "0.8.1"
souvlaki = "0.5.3"
raw-window-handle = "0.5.0"
rubato = "0.12.0"
arrayvec = "0.7.1"
